gdb/aix-thread.c
@@ -58,6 +58,10 @@
 #include <sched.h>
 #include <sys/pthdebug.h>
 
+#if !HAVE_DECL_GETTHRDS
+extern int getthrds (pid_t, struct thrdsinfo64 *, int, pthdb_tid_t *, int);
+#endif
+
 /* Whether to emit debugging output.  */
 static int debug_aix_thread;
 
@@ -646,10 +650,6 @@ get_signaled_thread (void)
   struct thrdsinfo64 thrinf;
   pthdb_tid_t ktid = 0;
   int result = 0;
-
-  /* getthrds(3) isn't prototyped in any AIX 4.3.3 #include file.  */
-  extern int getthrds (pid_t, struct thrdsinfo64 *, 
-		       int, pthdb_tid_t *, int);
 
   while (1)
   {
